--- a/test/headjs.html
+++ b/test/headjs.html
@@ -2,7 +2,7 @@
 
 <head>
 	<script>var now = new Date();</script>
-	<script src="../../head.min.js"></script>	
+	<script src="media/js/head.min.js"></script>	
 	<link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 
