--- a/test/headjs.html
+++ b/test/headjs.html
@@ -26,7 +26,9 @@
 	<div id="content">
 		<h1>Loading with head.js()</h1>
 		
-		<h2>Page is rendered immediately. Script loading is separated from the rendering process.</h2>
+		<h2>
+			Page is rendered immediately. Script loading is separated from the rendering process. Reload to see the full effect.
+		</h2>
 		
 		<p>
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi metus nulla, euismod eget pulvinar eget, rhoncus vitae nibh. Aenean velit ante, porta nec cursus nec, congue ac lectus. Etiam id mauris leo, quis fermentum mauris. Morbi et lectus eget lacus vulputate accumsan non in sapien. Pellentesque mattis tempus mollis. Nam euismod justo in purus interdum ullamcorper faucibus gravida ante. Vivamus molestie dui quis augue elementum ac elementum turpis varius. Aliquam semper, quam ut viverra sollicitudin, tortor turpis condimentum lacus, quis scelerisque lorem risus nec purus. Nulla vel pretium lacus. Pellentesque mattis ante vitae ante dignissim sed commodo nunc iaculis. Suspendisse convallis feugiat arcu, nec lobortis nulla sagittis nec. Duis neque tellus, tincidunt vel semper ac, tincidunt quis est. Suspendisse potenti.
@@ -36,7 +38,9 @@
 			Nulla facilisi. Sed urna leo, cursus sed fringilla in, malesuada non mi. Maecenas sit amet metus in orci faucibus pharetra quis quis nisi. Sed porta molestie nunc ac imperdiet. Aliquam laoreet accumsan nisi ac posuere. Proin molestie sapien euismod odio bibendum sodales. Curabitur gravida, justo eu eleifend gravida, sem massa feugiat mi, ut consequat elit velit in augue. Ut fringilla lacus vel purus adipiscing placerat. Donec viverra tristique odio vitae fringilla. Phasellus ut felis eu quam ornare euismod ut ut ipsum. Suspendisse vitae pellentesque nunc. Maecenas eu ligula ut purus pulvinar cursus id quis turpis. Nullam in diam feugiat tortor porta sagittis. Mauris fringilla ipsum purus, scelerisque bibendum elit. Morbi at ante augue, et porttitor sapien.
 		</p>
 		
-		<div id="info"></div>
+		<p>
+			Rendering time <span id="info"></span>
+		</p>
 	</div>
 	
 	<script>		
