--- a/index.html
+++ b/index.html
@@ -9,16 +9,13 @@
 	<meta name="description" content="Load scripts like images. Use HTML5 and CSS3 safely. Target CSS for different screens, paths, states and browsers. Make it the only script in your HEAD. A concise solution to universal issues.">
 	<meta name="keywords" content="labjs, modernizr, parallel script loading, javascript loader, non-blocking javascript, javascript modernizer">	
 	<meta name="author" content="tipiirai (Tero Piirainen)">	
-	
 		
-	<script src="media/js/head.min.js"></script>
+	<script src="media/js/head.min.js?v=1"></script>
 	
 	<!-- include the stylesheet after headjs -->
 	<link rel="stylesheet" href="media/css/style.css?v=0.3"> 
 	<link rel="icon" type="image/gif" href="media/img/favicon.gif?v=1">
 	
-		
-		
 </head>
 
 
