--- a/test/headjs.html
+++ b/test/headjs.html
@@ -16,12 +16,12 @@
 	</script> 
 	
 	
-<script src="../media/js/head.loader.js"></script> 
+<script src="../media/js/head.min.js"></script> 
 
 <script>
 head.js("https://github.com/DmitryBaranovskiy/raphael/raw/master/raphael.js")
 	 .js("https://github.com/jquery/jquery-ui/raw/master/jquery-1.4.4.js")
-	 .js("https://github.com/codyaray/mashbot/raw/b6e3723dc29026bdec9cb7963812e9636cdbe03d/public/javascripts/prototype.js")
+	 .js("https://github.com/smith/scripty2/raw/master/lib/prototype.js")
 	 .js("https://github.com/headjs/www/raw/master/content/test/jquery-ui.js")
 	 .js("https://github.com/kosmas58/compass-jquery-plugin/raw/master/lib/jslint.js");
 </script>
