--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<a href="#theory">theory</a>
 	<a href="#usage">usage</a>
 	<a href="#api">api</a>
-	<a href="#download">download</a>
+	<a href="#download">download (v0.8)</a>
 </nav>
 
 <div id="hero">
