--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
  </li>
 
  <li><p><code>document.write()</code> statements are not supported since it's hard or impossible to know where to write to. 
-   It's an bad programming habit anyway so it's likely that Head JS will ever support this.
+   It's a bad programming habit anyway so it's likely that Head JS will never support this.
 </p>
 
  </li>
