--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<a href="#theory">theory</a>
 	<a href="#usage">usage</a>
 	<a href="#api">api</a>
-	<a href="#download">download (v0.8)</a>
+	<a href="#download">download <strong>(v0.8)</strong></a>
 </nav>
 
 <div id="hero">
@@ -47,7 +47,7 @@
    <h3>A 2.30 kb script that speeds up, simplifies and modernizes your site</h3>
 
 	<p>
-		Load scripts like images. Use HTML5 and CSS3 safely. Target CSS for different screens, paths, states and browsers. Make it the only script in your HEAD. A concise solution to universal issues.  <a href="#theory">more theory &raquo;</a>
+		Load scripts like images. Use HTML5 and CSS3 safely. Target CSS for different screens, paths, states and browsers. Make it the only script in your HEAD. A concise solution to universal issues.  <a href="#theory">the theory &raquo;</a>
 	</p>
    
 </div>
@@ -610,7 +610,7 @@
 <h2>Future</h2>
 <p>Head JS is rapidly being adopted to large number of websites all the time. A quick <a href="http://twitter.com/search?q=headjs">Twitter search</a> reveals that it's becoming a core client side development tool for many. For the same reason I also get a lot of feature requests. Right now the strategy is to keep Head JS as minimalistic as it is now. 
 </p>
-<p>Expect <em>not</em> to see extensive CSS3 testing, CSS loaders or more complex loading logics being developed. These can be build on <em>top</em> of Head JS. A separate module or extension. If you have an idea pleace concider this first.
+<p>Expect <em>not</em> to see extensive CSS3 feature detection, dynamic CSS loading or more complex JS loading developed. These can be build on <em>top</em> of Head JS. A separate module or extension. If you have an idea pleace concider this first.
    </section>
 </p>
 <pre><code>
