Removed all w3schools references in favor to whatwg. w3schools is evil, avoid it

--- a/index.html
+++ b/index.html
@@ -236,26 +236,26 @@ support for older browsers with the aid of "no-" classes.</p>
 
 <h4>List of new tags</h4>
 <ul>
-<li><a href="http://www.w3schools.com/html5/tag_abbr.asp">abbr</a> an abbrevation</li>
-<li><a href="http://www.w3schools.com/html5/tag_article.asp">article</a> defines external content</li>
-<li><a href="http://www.w3schools.com/html5/tag_aside.asp">aside</a> defines some content aside from the content it is placed in</li>
-<li><a href="http://www.w3schools.com/html5/tag_audio.asp">audio</a> defines sound, such as music or other audio streams.</li>
-<li><a href="http://www.w3schools.com/html5/tag_canvas.asp">canvas</a> a container for javascript graphics</li>
-<li><a href="http://www.w3schools.com/html5/tag_details.asp">details</a> describe details about a document, or parts of a document</li>
-<li><a href="http://www.w3schools.com/html5/tag_figcaption.asp">figcaption</a> contains a caption for the "figure" element</li>
-<li><a href="http://www.w3schools.com/html5/tag_figure.asp">figure</a> stand-alone content, typically used to explain parts of a document</li>
-<li><a href="http://www.w3schools.com/html5/tag_footer.asp">footer</a> defines the footer of a section or document</li>
-<li><a href="http://www.w3schools.com/html5/tag_header.asp">header</a> defines the header of a section or document</li>
-<li><a href="http://www.w3schools.com/html5/tag_hgroup.asp">hgroup</a> defines the heading of a section or a document.</li>
-<li><a href="http://www.w3schools.com/html5/tag_mark.asp">mark</a> tag defines marked or highlighted text</li>
-<li><a href="http://www.w3schools.com/html5/tag_meter.asp">meter</a> for measurements with a known minimum and maximum value</li>
-<li><a href="http://www.w3schools.com/html5/tag_nav.asp">nav</a> a section intended for navigation</li>
-<li><a href="http://www.w3schools.com/html5/tag_output.asp">output</a> defines different types of output, such as output written by a script</li>
-<li><a href="http://www.w3schools.com/html5/tag_progress.asp">progress</a>display the progress of a time consuming function in JavaScript.</li>
-<li><a href="http://www.w3schools.com/html5/tag_section.asp">section</a> defines sections in a document such as chapters, headers, footers, or any other sections of the document.</li>
-<li><a href="http://www.w3schools.com/html5/tag_summary.asp">summary</a> contains a header for the "details" element</li>
-<li><a href="http://www.w3schools.com/html5/tag_time.asp">time</a> defines a time or a date, or both.</li>
-<li><a href="http://www.w3schools.com/html5/tag_video.asp">video</a> defines video, such as a movie clip or other video streams  <br />
+<li><a href="http://developers.whatwg.org/text-level-semantics.html#the-abbr-element">abbr</a> an abbrevation</li>
+<li><a href="http://developers.whatwg.org/sections.html#the-article-element">article</a> defines external content</li>
+<li><a href="http://developers.whatwg.org/sections.html#the-aside-element">aside</a> defines some content aside from the content it is placed in</li>
+<li><a href="http://developers.whatwg.org/video.html#audio">audio</a> defines sound, such as music or other audio streams.</li>
+<li><a href="http://developers.whatwg.org/the-canvas-element.html#the-canvas-element">canvas</a> a container for javascript graphics</li>
+<li><a href="http://developers.whatwg.org/interactive-elements.html#the-details-element">details</a> describe details about a document, or parts of a document</li>
+<li><a href="http://developers.whatwg.org/grouping-content.html#the-figcaption-element">figcaption</a> contains a caption for the "figure" element</li>
+<li><a href="http://developers.whatwg.org/grouping-content.html#the-figcaption-element">figure</a> stand-alone content, typically used to explain parts of a document</li>
+<li><a href="http://developers.whatwg.org/sections.html#the-footer-element">footer</a> defines the footer of a section or document</li>
+<li><a href="http://developers.whatwg.org/sections.html#the-header-element">header</a> defines the header of a section or document</li>
+<li><a href="http://developers.whatwg.org/sections.html#the-hgroup-element">hgroup</a> defines the heading of a section or a document.</li>
+<li><a href="http://developers.whatwg.org/text-level-semantics.html#the-mark-element">mark</a> tag defines marked or highlighted text</li>
+<li><a href="http://developers.whatwg.org/the-button-element.html#the-meter-element">meter</a> for measurements with a known minimum and maximum value</li>
+<li><a href="http://developers.whatwg.org/sections.html#the-nav-element">nav</a> a section intended for navigation</li>
+<li><a href="http://developers.whatwg.org/the-button-element.html#the-output-element">output</a> defines different types of output, such as output written by a script</li>
+<li><a href="http://developers.whatwg.org/the-button-element.html#the-progress-element">progress</a>display the progress of a time consuming function in JavaScript.</li>
+<li><a href="http://developers.whatwg.org/sections.html#the-section-element">section</a> defines sections in a document such as chapters, headers, footers, or any other sections of the document.</li>
+<li><a href="http://developers.whatwg.org/interactive-elements.html#the-summary-element">summary</a> contains a header for the "details" element</li>
+<li><a href="http://html5doctor.com/the-time-element/">time</a> defines a time or a date, or both.</li>
+<li><a href="http://developers.whatwg.org/video.html#video">video</a> defines video, such as a movie clip or other video streams  <br />
 </li>
 </ul>
 <p>IE has problems printing HTML5 elements. You can fix that by loading a <a href="http://www.iecss.com/print-protector/">print protector</a> script on your page:</p>
