--- a/test/headjs.html
+++ b/test/headjs.html
@@ -1,10 +1,9 @@
 <!doctype html>
 
-
 <html class="no-js">
 
 <head>
-	<title>head.js</title>
+	<title></title>
 	
 	<script>
 		// calculate difference between zero and window.onload
@@ -15,15 +14,14 @@
 		}
 	</script> 
 	
-	
-<script src="../media/js/head.min.js"></script> 
+	<script src="../media/js/head.min.js"></script>
 
 <script>
 head.js("https://github.com/DmitryBaranovskiy/raphael/raw/master/raphael.js")
-	 .js("https://github.com/jquery/jquery-ui/raw/master/jquery-1.4.4.js")
-	 .js("https://github.com/smith/scripty2/raw/master/lib/prototype.js")
-	 .js("https://github.com/headjs/www/raw/master/content/test/jquery-ui.js")
-	 .js("https://github.com/kosmas58/compass-jquery-plugin/raw/master/lib/jslint.js");
+     .js("https://github.com/jquery/jquery-ui/raw/master/jquery-1.4.4.js")
+     .js("https://github.com/smith/scripty2/raw/master/lib/prototype.js")
+     .js("https://github.com/headjs/www/raw/master/content/test/jquery-ui.js")
+     .js("https://github.com/kosmas58/compass-jquery-plugin/raw/master/lib/jslint.js");
 </script>
 
 
@@ -61,7 +59,7 @@ head.js("https://github.com/DmitryBaranovskiy/raphael/raw/master/raphael.js")
 		
 		<div id="content" style="display:none">
 		
-			<h1>head.js</h1>
+			<h1></h1>
 			
 			<div id="time"><span id="ms"></span> ms</div>
 			
@@ -83,7 +81,9 @@ head.js("https://github.com/DmitryBaranovskiy/raphael/raw/master/raphael.js")
 			
 			<p class="details">
 				
-head.js() calls are always separate from the page rendering. Does not matter whether you load on HEAD or on bottom. You can also load programmatically on demand.
+head.js() calls are always separate from the page rendering. Does not matter
+whether you load on HEAD or on bottom. You can also load programmatically on
+demand.
 
 			</p>
 			
@@ -97,8 +97,7 @@ head.js() calls are always separate from the page rendering. Does not matter whe
 		
 	</div>
 	
-	
-	
+		
 </body>
 	
 	
