--- a/test/script-bottom.html
+++ b/test/script-bottom.html
@@ -1,10 +1,9 @@
 <!doctype html>
 
-
 <html class="no-js">
 
 <head>
-	<title>SCRIPT SRC on bottom</title>
+	<title></title>
 	
 	<script>
 		// calculate difference between zero and window.onload
@@ -16,7 +15,6 @@
 	</script> 
 	
 	
-
 	<!-- inline style so that we can focus on script loading only -->
 	<style>
 	html { background-color:#f9f9f9;	 }
@@ -51,7 +49,7 @@
 		
 		<div id="content" style="display:none">
 		
-			<h1>SCRIPT SRC on bottom</h1>
+			<h1></h1>
 			
 			<div id="time"><span id="ms"></span> ms</div>
 			
@@ -73,7 +71,8 @@
 			
 			<p class="details">
 				
-There is not much difference whether the scripts are loaded on HEAD or on bottom. The key to high performance is to load without <em>blocking</em>.
+There is not much difference whether the scripts are loaded on HEAD or on
+bottom. The key to high performance is to load without <em>blocking</em>.
 
 			</p>
 			
