--- a/test/script.html
+++ b/test/script.html
@@ -1,10 +1,9 @@
 <!doctype html>
 
-
 <html class="no-js">
 
 <head>
-	<title>SCRIPT SRC in head</title>
+	<title></title>
 	
 	<script>
 		// calculate difference between zero and window.onload
@@ -57,7 +56,7 @@
 		
 		<div id="content" style="display:none">
 		
-			<h1>SCRIPT SRC in head</h1>
+			<h1></h1>
 			
 			<div id="time"><span id="ms"></span> ms</div>
 			
@@ -78,8 +77,7 @@
 			</p> 
 			
 			<p class="details">
-				
-			</p>
+							</p>
 			
 		</div>
 		
@@ -91,8 +89,7 @@
 		
 	</div>
 	
-	
-	
+		
 </body>
 	
 	
