--- a/index.html
+++ b/index.html
@@ -416,6 +416,10 @@ separate module or extension. If you have an idea please consider this&nbsp;firs
     </footer>
 
     <script>
+            head.js("http://www.google-analytics.com/ga.js", function() {
+            var tracker = _gat._getTracker("UA-20001309-1");
+            tracker._trackPageview();
+        });
         </script>
 
 </body>
