--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="wrap">
 
         <nav>
-<a href="#highlights">highlights</a> &bull;<a href="#theory">theory</a> &bull;<a href="#usage">usage</a> &bull;<a href="#api">api</a> &bull;<a href="#download">download <strong> (v 0.96)</strong></a>
+<a href="#highlights">highlights</a> &bull;<a href="#theory">theory</a> &bull;<a href="#usage">usage</a> &bull;<a href="#api">api</a> &bull;<a href="#download">download <strong> (v 0.97a)</strong></a>
 </nav>
 
 <div id="hero">
@@ -383,11 +383,11 @@ loaded. For example:
 
 <h1>Download</h1>
 <section id="download">
-    <h2>Version&nbsp;0.96</h2>
+    <h2>Version&nbsp;0.97a</h2>
 <ul>
-<li><a href="https://github.com/headjs/headjs/raw/v0.96/dist/head.js">head.js</a> - source&nbsp;code</li>
-<li><a href="https://github.com/headjs/headjs/raw/v0.96/dist/head.min.js">head.min.js</a> - minified&nbsp;version</li>
-<li><a href="https://github.com/headjs/headjs/raw/v0.96/dist/head.load.min.js">head.load.min.js</a> - JavaScript loader&nbsp;only</li>
+<li><a href="https://github.com/headjs/headjs/raw/v0.97a/dist/head.js">head.js</a> - source&nbsp;code</li>
+<li><a href="https://github.com/headjs/headjs/raw/v0.97a/dist/head.min.js">head.min.js</a> - minified&nbsp;version</li>
+<li><a href="https://github.com/headjs/headjs/raw/v0.97a/dist/head.load.min.js">head.load.min.js</a> - JavaScript loader&nbsp;only</li>
 <li><a href="https://github.com/headjs/headjs">Github Repository</a> - all&nbsp;sources</li>
 </ul>
 <p><a href="https://github.com/headjs/headjs/commits/master">Release&nbsp;notes</a></p>
