--- a/test/script.html
+++ b/test/script.html
@@ -16,9 +16,9 @@
 	
 	
 <script src="https://github.com/DmitryBaranovskiy/raphael/raw/master/raphael.js"></script>
-<script src="https://github.com/jquery/jquery-ui/raw/master/jquery-1.4.4.js"></script>
+<script src="https://raw.github.com/jquery/jquery-ui/master/tests/jquery-1.8.2.js"></script>
 <script src="https://github.com/smith/scripty2/raw/master/lib/prototype.js"></script>
-<script src="https://github.com/headjs/www/raw/master/content/test/jquery-ui.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
 <script src="https://github.com/kosmas58/compass-jquery-plugin/raw/master/lib/jslint.js"></script>
 
 
