--- a/test/headjs.html
+++ b/test/headjs.html
@@ -14,7 +14,7 @@
 		}
 	</script> 
 	
-	<script src="../media/js/head.min.js"></script>
+	<script src="https://raw.github.com/headjs/headjs/master/dist/head.min.js"></script>
 
 <script>
 head.js("https://github.com/DmitryBaranovskiy/raphael/raw/master/raphael.js")
