--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="labjs, modernizr, parallel script loading, javascript loader, non-blocking javascript, javascript modernizer" />
     <meta name="author" content="Tero Piirainen">
 
-    <script src="media/js/head.min.js?v=2"></script>
+    <script src="https://raw.github.com/headjs/headjs/master/dist/head.min.js"></script>
 
     <!-- include the stylesheet after headjs -->
     <link rel="stylesheet" href="media/css/style.css?v=0.3">
@@ -29,7 +29,7 @@
     <div id="wrap">
 
         <nav>
-<a href="#highlights">highlights</a> &bull;<a href="#theory">theory</a> &bull;<a href="#usage">usage</a> &bull;<a href="#api">api</a> &bull;<a href="#download">download <strong> (v 0.97a)</strong></a>
+<a href="#highlights">highlights</a> &bull;<a href="#theory">theory</a> &bull;<a href="#usage">usage</a> &bull;<a href="#api">api</a> &bull;<a href="#download">download <strong> (v 0.98)</strong></a>
 </nav>
 
 <div id="hero">
@@ -380,11 +380,11 @@ loaded. For example:
 
 <h1>Download</h1>
 <section id="download">
-    <h2>Version&nbsp;0.97a</h2>
+    <h2>Version&nbsp;0.98</h2>
 <ul>
-<li><a href="https://github.com/headjs/headjs/raw/v0.97a/dist/head.js">head.js</a> - source&nbsp;code</li>
-<li><a href="https://github.com/headjs/headjs/raw/v0.97a/dist/head.min.js">head.min.js</a> - minified&nbsp;version</li>
-<li><a href="https://github.com/headjs/headjs/raw/v0.97a/dist/head.load.min.js">head.load.min.js</a> - JavaScript loader&nbsp;only</li>
+<li><a href="https://github.com/headjs/headjs/raw/v0.98/dist/head.js">head.js</a> - source&nbsp;code</li>
+<li><a href="https://github.com/headjs/headjs/raw/v0.98/dist/head.min.js">head.min.js</a> - minified&nbsp;version</li>
+<li><a href="https://github.com/headjs/headjs/raw/v0.98/dist/head.load.min.js">head.load.min.js</a> - JavaScript loader&nbsp;only</li>
 <li><a href="https://github.com/headjs/headjs">Github Repository</a> - all&nbsp;sources</li>
 </ul>
 <p><a href="https://github.com/headjs/headjs/commits/master">Release&nbsp;notes</a></p>
