--- a/test/headjs-ordered.html
+++ b/test/headjs-ordered.html
@@ -16,7 +16,7 @@
 	</script> 
 	
 	
-<script src="../media/js/head.loader.js"></script> 
+<script src="https://raw.github.com/headjs/headjs/master/dist/head.load.min.js"></script> 
 
 <script>
 head.js(
