--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     Load scripts like images. Use HTML5 and CSS3 safely. Target CSS for
     different screens, paths, states and browsers. Make it the only script in
     your HEAD. A concise solution to universal issues.
-    <a href="#theory">the theory &raquo;</a>
+    <a href="#theory">&laquo; the theory &raquo;</a>
     </p>
 
 </div>
