--- a/test/script.html
+++ b/test/script.html
@@ -1,161 +1,60 @@
 <!doctype html>
-
 <html class="no-js">
-
-<head>
-    <meta charset="utf-8"/>
-    <title></title>
-    <script>
-        // calculate difference between zero and window.onload
-        var now = new Date();
-        window.onload = function () {
-            document.getElementById("content").style.display = "block";
-            document.getElementById("ms").innerHTML = (new Date()).getTime() - now.getTime();
-        };
-    </script>
-
-    <script src="https://github.com/DmitryBaranovskiy/raphael/raw/master/raphael.js"></script>
-    <script src="https://raw.github.com/jquery/jquery-ui/master/tests/jquery-1.8.2.js"></script>
-    <script src="https://github.com/smith/scripty2/raw/master/lib/prototype.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
-    <script src="https://github.com/kosmas58/compass-jquery-plugin/raw/master/lib/jslint.js"></script>
-
-    <!-- inline style so that we can focus on script loading only -->
-    <style>
-        html {
-            background-color: #f9f9f9;
-        }
-
-        body {
-            color: #333;
-            font: 13px sans-serif;
-        }
-
-        #wrap {
-            margin: 50px auto;
-            width: 800px;
-        }
-
-        #nav {
-            padding-left: 30px;
-        }
-
-            #nav a {
-                float: left;
-                margin-right: 30px;
-                color: #666;
-                text-decoration: none;
-                font-weight: bold;
-            }
-
-            #nav em {
-                display: block;
-                font-style: normal;
-                font-weight: normal;
-                color: #999;
-            }
-
-        #content {
-            margin-top: 10px;
-            background-color: #fff;
-            padding: 30px;
-            -webkit-border-radius: 5px;
-            -moz-border-radius: 5px;
-            -moz-box-shadow: 0 0 5px rgba(0,0,0,.2);
-            -webkit-box-shadow: 0 0 5px rgba(0,0,0,.2);
-        }
-
-        h1 {
-            color: #777;
-            font-size: 40px;
-            margin: 0;
-            margin-bottom: -10px;
-        }
-
-            h1 em {
-                font-weight: normal;
-                font-style: normal;
-                color: #999;
-            }
-
-        #time {
-            font-size: 150px;
-            color: #888;
-        }
-
-        #ms {
-            font-weight: bold;
-            color: #222;
-            margin-right: -25px;
-        }
-
-        #content p {
-            font-size: 18px;
-            margin: 5px 0;
-            color: #777;
-        }
-
-        #content strong {
-            color: #222;
-        }
-
-        #footer {
-            margin: 5px 15px;
-        }
-
-            #footer a {
-                text-decoration: none;
-                color: #666;
-                font-size: 11px;
-            }
-    </style>
-
-</head>
-
+    <head>
+        <meta charset="utf-8"/>
+        <title>SCRIPT SRC in &lt;head&gt;</title>
+        <link rel="stylesheet" href="style.css" />
+        <script>
+            // calculate difference between zero and window.onload            
+            window.onload = function () {
+                var stop = new Date();
+                document.getElementById("content").style.display = "block";
+                document.getElementById("ms").innerHTML          = (stop - start);
+            };
+        </script>
+        <script>
+            var start = new Date();
+        </script>
+        <script src="http://ajax.googleapis.com/ajax/libs/mootools/1.4.5/mootools-yui-compressed.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/prototype/1.7.1.0/prototype.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
+    </head>
     <body>
-
         <div id="wrap">
-
             <div id="nav" class="clear">
                 <a href="script.html">SCRIPT SRC <em>in head</em></a>
                 <a href="script-bottom.html">SCRIPT SRC <em>on bottom</em></a>
                 <a href="headjs.html">head.js <em>on head</em></a>
-                <br clear="all" />
+                <br />
             </div>
-
             <div id="content" style="display: none">
-
-                <h1></h1>
-
-                <div id="time"><span id="ms"></span>ms</div>
-
+                <h1>SCRIPT SRC before &lt;/head&gt;</h1>
+                <div id="time"><span id="ms"></span> ms</div>
                 <p>
-                    Press <strong>CTRL+SHIFT+R</strong> to reload with an empty cache = first impression.
+                    Press <strong>CTRL+SHIFT+R</strong> or <strong>CTRL+F5</strong> to reload with an <strong>empty cache</strong> = first impression.
                 </p>
-
+                <br />
                 <p>
                     <strong>View source</strong> to see how scripts are provided.
                 </p>
-
                 <p>
                     Time is calculated when <code>window.onload</code> fires.
                 </p>
-
                 <p>
                     Try with different browsers. The time difference varies a lot.
                 </p>
-
                 <p class="details">
+                    head.js() calls are always separate from the page rendering. Does not matter
+                    whether you load on HEAD or on bottom. You can also load programmatically on
+                    demand.
                 </p>
-
             </div>
-
             <div id="footer">
-                <a href="../#theory">&laquo; headjs.com</a>
-
+                <a href="../index.html#theory">&laquo; headjs.com</a>
                 &nbsp; | &nbsp; <a href="https://github.com/headjs/headjs/issues">found a bug?</a>
             </div>
-
         </div>
     </body>
 </html>
