--- a/index.html
+++ b/index.html
@@ -27,12 +27,15 @@
         <div id="hero">
             <h1>HEAD<em>JS</em></h1>
             <h2>The only script in your &lt;HEAD&gt;</h2>
-            <h3>A tiny script that speeds up, simplifies and modernizes your site</h3>
+            <h3>A tiny script that simplifies, speeds up, and modernizes your site</h3>
             <p>                
-                Load script on demand. Target HTML5 and CSS3 safely. Responsive design for
-                different screens, paths, states and browsers. Make it the only script in
-                your HEAD. A concise solution to universal issues.
-                <a href="#theory">&laquo; the theory &raquo;</a>
+                Load scripts on demand.
+                Achieve responsive design with CSS targeting different screen reolutions, paths, states and browsers.
+                Detect browser features.
+                Target HTML5 and CSS3 safely.                
+                Make it the only script in your HEAD.
+                A concise solution to universal issues.
+                &nbsp; <a href="#theory">&laquo; the theory &raquo;</a>
             </p>
 
         </div>
