--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
             <h3>A tiny script that simplifies, speeds up, and modernizes your site</h3>
             <p>                
                 Load scripts on demand.
-                Achieve responsive design with CSS targeting different screen reolutions, paths, states and browsers.
+                Achieve responsive design with automated CSS targeting different screen reolutions, paths, states and browsers.
                 Detect browser features.
-                Target HTML5 and CSS3 safely.                
+                Target HTML5 and CSS3 safely.                               
+                <br/>
                 Make it the only script in your HEAD.
                 A concise solution to universal issues.
                 &nbsp; <a href="#theory">&laquo; the theory &raquo;</a>
