--- a/index.html
+++ b/index.html
@@ -764,14 +764,8 @@
                 <p>
                     Head <span class="caps">JS</span> is rapidly being adopted to large number of websites all the time. A
                     quick <a href="http://twitter.com/search?q=headjs">Twitter search</a> reveals that it&#8217;s
-                    becoming a core client side development tool for many. For the same reason I
-                    also get a lot of feature requests. Right now the strategy is to keep Head <span class="caps">JS</span>
-                    as minimalistic as it is&nbsp;now.
-                </p>
-                <p>
-                    Expect <em>not</em> to see extensive <span class="caps">CSS3</span> feature detection, dynamic <span class="caps">CSS</span> loading or
-                    more complex <span class="caps">JS</span> loading developed. These can be build on <em>top</em> of Head <span class="caps">JS</span>. A
-                    separate module or extension. If you have an idea please consider this&nbsp;first.
+                    becoming a core client side development tool for many. The strategy is to keep Head <span class="caps">JS</span>
+                    as minimalistic as possible.
                 </p>
             </section>
         </div>
