--- a/index.html
+++ b/index.html
@@ -738,14 +738,27 @@
             <h1>Download</h1>
             <section id="download">
                 <h2>Version&nbsp;0.98</h2>
-                <ul>
-                    <li><a href="https://github.com/headjs/headjs/raw/v0.98/dist/head.js">head.js</a> - source&nbsp;code</li>
-                    <li><a href="https://github.com/headjs/headjs/raw/v0.98/dist/head.min.js">head.min.js</a> - minified&nbsp;version</li>
-                    <li><a href="https://github.com/headjs/headjs/raw/v0.98/dist/head.load.min.js">head.load.min.js</a> - JavaScript loader&nbsp;only</li>
-                    <li><a href="https://github.com/headjs/headjs">Github Repository</a> - all&nbsp;sources</li>
-                </ul>
+                <table>
+                    <tr>
+                        <td><a href="https://github.com/headjs/headjs/raw/v0.98/dist/head.min.js">head.min.js</a></td>
+                        <td>Full Bundle</td>
+                    </tr>
+                    <tr>
+                        <td><a href="https://github.com/headjs/headjs/raw/v0.98/dist/head.load.min.js">head.core.min.js</a></td>
+                        <td>Responsive Design & Feature Detection Only</td>
+                    </tr>
+                    <tr>
+                        <td><a href="https://github.com/headjs/headjs/raw/v0.98/dist/head.core.min.js">head.load.min.js</a></td>
+                        <td>JavaScript Loader Only</td>
+                    </tr>
+                    <tr>
+                        <td><a href="https://github.com/headjs/headjs">Github Repository</a></td>
+                        <td>Source Code</td>
+                    </tr>
+                </table>
+
                 <p>
-                    <a href="https://github.com/headjs/headjs/blob/master/changelog.txt">Release&nbsp;notes</a>
+                    <strong><a href="https://github.com/headjs/headjs/blob/master/changelog.txt">Release&nbsp;notes</a></strong>
                 </p>
                 <h4>Spread the word</h4>
                 <p>                                       
