--- a/index.html
+++ b/index.html
@@ -764,7 +764,7 @@
                 <p>                                       
                     <script type="IN/Share"></script>                        
                     <a href="https://twitter.com/share" class="twitter-share-button" data-via="headjs" data-count="none">Tweet</a>
-                    <span class="g-plusone" data-size="medium"></span>
+                    <span class="g-plusone" data-size="medium" data-href="http://headjs.com"></span>
                 </p>
                 <hr />
                 <h3>Issues</h3>
