added unit tests & preparing site re-layout

--- a/test/headjs.html
+++ b/test/headjs.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <title>SCRIPT via HeadJS</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="https://raw.github.com/headjs/headjs/master/dist/head.min.js"></script>
+    <script src="../media/libs/headjs/head.min.js"></script>
     <script>
         // calculate difference between zero and window.onload        
         window.onload = function () {
