--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="google-site-verification" content="pqzn85yrum0AY6ugIrX0zoIEazSHL9p09us5yvHwZqw" />
     <title>HeadJS, the only script in your &lt;head&gt;</title>
 
-    <meta name="description" content="Load scripts like images. Use HTML5 and CSS3 safely. Target CSS for different screens, paths, states and browsers. Make it the only script in your HEAD. A concise solution to universal issues." />
+    <meta name="description" content="Load scripts on demand. Use HTML5 and CSS3 safely. Target CSS for different screens, paths, states and browsers. Make it the only script in your HEAD. A concise solution to universal issues." />
     <meta name="keywords" content="labjs, modernizr, parallel script loading, javascript loader, non-blocking javascript, javascript modernizer" />
-    <meta name="author" content="Tero Piirainen">
+    <meta name="author" content="Tero Piirainen, Robert Hoffmann">
     
     <!-- include the stylesheet after headjs -->    
     <link rel="stylesheet" type="text/css" href="media/css/html5.min.css" />
@@ -38,8 +38,8 @@
             <h3>A tiny script that simplifies, speeds up, and modernizes your site</h3>
             <p>
                 Load scripts on demand.
-                Achieve responsive design with automated CSS targeting different screen reolutions, paths, states and browsers.
-                Detect browser features.
+                Achieve responsive design with CSS targeting different screen reolutions, paths, states and browsers.
+                Detect browsers & browser features.
                 Target HTML5 and CSS3 safely.                               
                 <br />
                 Make it the only script in your HEAD.
