--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
     <meta name="description" content="Load scripts on demand. Use HTML5 and CSS3 safely. Target CSS for different screens, paths, states and browsers. Make it the only script in your HEAD. A concise solution to universal issues." />
     <meta name="keywords" content="labjs, modernizr, parallel script loading, javascript loader, non-blocking javascript, javascript modernizer" />
-    <meta name="author" content="Tero Piirainen, Robert Hoffmann">
+    <meta name="author" content="Tero Piirainen">
+    <meta name="author" content="Robert Hoffmann">
     
     <!-- include the stylesheet after headjs -->    
     <link rel="stylesheet" type="text/css" href="media/css/html5.min.css" />
