--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <meta name="description" content="Load scripts on demand. Use HTML5 and CSS3 safely. Target CSS for different screens, paths, states and browsers. Make it the only script in your HEAD. A concise solution to universal issues." />
     <meta name="keywords" content="labjs, modernizr, parallel script loading, javascript loader, non-blocking javascript, javascript modernizer" />
     <meta name="author" content="Tero Piirainen">
-    <meta name="author" content="Robert Hoffmann">
     
     <!-- include the stylesheet after headjs -->    
     <link rel="stylesheet" type="text/css" href="media/css/html5.min.css" />
@@ -844,7 +843,7 @@ var head_conf = screensCss: {
         </div>
     </div>
     <footer>
-        <a href="http://cloudpanic.com/about.html" target="_blank">Author: <strong>Tero Piirainen</strong></a> &bull;
+        <a href="http://cloudpanic.com/about.html" target="_blank">Created By: <strong>Tero Piirainen</strong></a> &bull;
         <a href="http://twitter.com/search?q=headjs" target="_blank">Twitter Talk</a> &bull;
         <a href="http://headjs.uservoice.com" target="_blank">Vote for & discuss features</a> &bull;
         <a href="http://stackoverflow.com/questions/tagged/head.js" target="_blank">Ask questions & find answers</a> &bull;
