--- a/index.html
+++ b/index.html
@@ -796,24 +796,23 @@ var head_conf = screensCss: {
                     <tr>
                         <td><a href="https://github.com/headjs/headjs/raw/v0.98/dist/head.min.js" target="_blank" onclick="_gaq.push(['b._trackPageview', 'download/head.min.js']);">head.min.js</a></td>
                         <td>Full Bundle</td>
-						<td><em>4.1K (minified & gzipped)</em></td>
+						<td><small><em><strong>4.1K</strong> (minified &amp; gzipped)</em></small></td>
                     </tr>
                     <tr>
                         <td><a href="https://github.com/headjs/headjs/raw/v0.98/dist/head.load.min.js" target="_blank" onclick="_gaq.push(['b._trackPageview', 'download/head.core.min.js']);">head.core.min.js</a></td>
                         <td>Responsive Design & Feature Detection Only</td>
-						<td><em>1.8K (minified & gzipped)</em></td>
+						<td><small><em><strong>1.8K</strong> (minified &amp; gzipped)</em></small></td>
                     </tr>
                     <tr>
                         <td><a href="https://github.com/headjs/headjs/raw/v0.98/dist/head.core.min.js" target="_blank" onclick="_gaq.push(['b._trackPageview', 'download/head.load.min.js']);">head.load.min.js</a></td>
                         <td>JavaScript Loader Only</td>
-						<td><em>1.9K (minified & gzipped)</em></td>
+						<td><small><em><strong>1.9K</strong> (minified &amp; gzipped)</em></small></td>
                     </tr>
                     <tr>
                         <td><a href="https://github.com/headjs/headjs" onclick="_gaq.push(['b._trackPageview', 'github.com']);">Github Repository</a></td>
                         <td>Source Code</td>
                     </tr>
                 </table>
-
                 <p>
                     <strong><a href="https://github.com/headjs/headjs/blob/master/changelog.txt">Release notes</a></strong>
                 </p>
